--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,6 +1,7 @@
 .about {
     padding: 4rem 2rem;
     background-color: #f8f8f8;
+    min-width: 300px;
 }
 
 .about-content {
