--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,5 +1,6 @@
 .contact {
     padding: 4rem 2rem;
+    min-width: 300px;
     background-color: #f8f8f8;
 }
 
