--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,7 @@
     background-color: #333;
     color: #fff;
     padding: 1rem 2rem;
+    min-width: 300px;
 }
 
 .header-content {
